# mobkoitask

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
mobkoitask/: config.py  etl_process.py  main.py
mobkoitask/db/: postgres.py
mobkoitask/storage/: local.py
mobkoitask/transformation/: binance.py  exchange_rates.py  index.py
scripts/: init-db.sql
tests/: test_etl_process.py  test_process_etl.py  test_transformation.py
