[tool.poetry]
name = "mobkoi-task"
version = "0.1.0"
description = ""
authors = ["telekosmos"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
psycopg-binary = "^3.0.14"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
